--- a/E_commerce_Clientes_e_vendedores (4).ipynb
+++ b/E_commerce_Clientes_e_vendedores (4).ipynb
@@ -1861,7 +1861,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Sobre os vendedores no estado, a capital tem a participação de 37,5%. Porcentagem muito próxima a de clientes da capital(37,2)."
+        "### Sobre os vendedores no estado, a capital tem a participação de 37,5%. Porcentagem muito próxima a de clientes da capital(37,2%)."
       ],
       "metadata": {
         "id": "q5FLTx2ZfYE6"
